# ateliers-data-2025-2026

./: README.md  pyproject.toml
2024/atelier-1/: notebook.ipynb
2024/atelier-2/: README.md
2024/atelier-2/data_prep/: data_prep.ipynb
2024/atelier-3/: README.md  notebook.ipynb
2024/atelier-3/data_prep/: data_prep.ipynb
atelier-0/: README.md  notebook.ipynb
atelier-0/data_prep/: dataset.csv  prep.ipynb
atelier-1/: README.md
atelier-1/data_prep/: data_prep.ipynb
atelier-2/: dataset.csv
atelier-3/: README.md
atelier-3/data_prep/: data_prep.ipynb
classification-1/: README.md  wines.csv
classification-1/data_prep/: data_prep.ipynb
classification-2/: README.md  notebook.ipynb
classification-2/.ipynb_checkpoints/: README-checkpoint.md
