[project]
name = "ateliers-data-2025-2026"
version = "0.1.0"
description = "Ateliers Data & ML 2025-2026 de Tuxae"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
